--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
+    "react-typing-animation": "^1.6.2",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
