--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-typing-animation": "^1.6.2",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
